package com.oop2.typewiz;

import javafx.event.ActionEvent;

public class DifficultyController {
    public void handleEasy(ActionEvent actionEvent) {
    }

    public void handleMedium(ActionEvent actionEvent) {
    }

    public void handleHard(ActionEvent actionEvent) {
    }
}
